# Octoprint-PrusaResetMode

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
octoprint_PrusaResetMode/static/js/: PrusaResetMode.js
octoprint_PrusaResetMode/templates/: PrusaResetMode_tab.jinja2
octoprint_prusaresetmode/: __init__.py
octoprint_prusaresetmode/static/js/: PrusaResetMode.js
octoprint_prusaresetmode/templates/: PrusaResetMode_tab.jinja2
